TherapistAssignment akisi baslatildi.